--- a/style.css
+++ b/style.css
@@ -8,10 +8,103 @@ header {
     margin-bottom: 20px;
 }
 
+.con  {
+ width: 80%;
+ margin: 0 10% 20% 10%;
+
+}
+
 body {
     background-color: gray;
 }
 
+nav {
+    width: 100%;
+    height: 150px;
+    background-color: lightgray;
+    text-align: center;
+    padding: 10px;
+    vertical-align: middle;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+/* .section {
+    width: 48%;
+    height: 350px;
+    background-color: lightgray;
+    margin: 5px;
+    position: relative;
+
+} */
+
+.section1 {
+    width: 48%;
+    height: 350px;
+    background-color: lightgray;
+    margin: 5px;
+    float: right;
+    position: relative;
+    float: right;
+}
+
+.article {
+    width: 100%;
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    background-color: darkgray;
+    padding-top: 20px;
+    margin-top: 20px;
+    margin-right: 10%;
+    margin-left: 10%;
+   
+   
+}
+
+.h2 {
+    position: relative;
+    width: 80%;
+    height: 20px;
+    background-color: green;
+    padding-top: 70px;
+    margin-top: 20px;
+    margin-right: 10%;
+    margin-left: 10%;
+    padding-bottom: 10px;
+    
+}
+
+
+p {
+    position: absolute;
+    width: 80%;
+    height: 30px;
+    background-color: red;
+    padding-top: 20px;
+    margin-top: 5px;
+    margin-right: 10%;
+    margin-left: 10%;
+    
+}
+
+
+footer {
+    width: 100%;
+    height: 150px;
+    background-color: lightgray;
+    text-align: center;
+    padding: 10px;
+    vertical-align: middle;
+    margin-bottom: 20px;
+    overflow: auto;
+    margin-bottom: 20%;
+    margin-top: 20px
+}
+
+
+
+/* 
 nav {
     width: 100%;
     height: 150px;
@@ -38,7 +131,6 @@ aside {
     background-color: lightgray;
     margin: 10px;
     position: relative;
-
 }
 
 .container {
@@ -89,5 +181,5 @@ p {
     background-color: rgb(0, 68, 255);
     padding-top: 20px;
     margin-top: 20px;
-}
+} */
 
